Update: Style fixed spacing issues
Fixed spacing issues with padding and margin

--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -3,6 +3,9 @@
 .nav-section{
     height: 6.5rem;
 }
+.nav-section .logo-container{
+  margin-bottom: 1.5rem;
+}
 .wishlist-icon:hover{
   color: var(--primary-clr);
 }
