--- a/product-list/product-list.css
+++ b/product-list/product-list.css
@@ -6,6 +6,8 @@
 }
 .nav-section .logo-container{
     margin-right: auto;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
 }
 .heading-container{
     margin: 0 auto;
